# serde_newtype

./: Cargo.toml  rustfmt.toml
src/: lib.rs
