[package]
name = "serde_newtype"
version = "0.1.0"
edition = "2021"
authors = ["Yotam Ofek <yotam.ofek@gmail.com>"]
description = "Macro for generating newtypes with validity checks for use with serde"
repository = "https://github.com/yotamofek/serde_newtype/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_with = "3"
serde_json = "1"
